overflow fix

--- a/src/app/connectionStrings/components/connectionString.scss
+++ b/src/app/connectionStrings/components/connectionString.scss
@@ -39,6 +39,8 @@
       padding-right: 10px;
       margin-bottom: -1px;
       text-overflow: ellipsis;
+      overflow: hidden;
+      width: 400px;
    }
 
    .properties {
